GH-2603 - Upgrade to Neo4j Java Driver 5.x.
This is the first of two changes in SDN 7 regarding Neo4j 5: It brings in the new driver 5.0.0 and adapts to its new API in two steps:

- All calls to deprecateed API are replaced to the new API where possible.
- All calls to `id()` are isolated in a separate utility class
- The internal ID generator now logs a warning when used

A follow up change will introduce a new internal id generator supporting the new element ids.

Nothing is changed internally, SDN still relies on the long id values.

Closes #2603