@@ -23,11 +23,11 @@ import static org.mockito.Mockito.when;
 
 import io.r2dbc.h2.H2ConnectionConfiguration;
 import io.r2dbc.h2.H2ConnectionFactory;
+import reactor.adapter.JdkFlowAdapter;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import java.lang.reflect.Field;
-import java.util.Collections;
 import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -42,8 +42,8 @@ import org.neo4j.driver.Bookmark;
 import org.neo4j.driver.Driver;
 import org.neo4j.driver.SessionConfig;
 import org.neo4j.driver.TransactionConfig;
-import org.neo4j.driver.reactive.RxSession;
-import org.neo4j.driver.reactive.RxTransaction;
+import org.neo4j.driver.reactive.ReactiveSession;
+import org.neo4j.driver.reactive.ReactiveTransaction;
 import org.springframework.data.neo4j.core.DatabaseSelection;
 import org.springframework.data.neo4j.core.UserSelection;
 import org.springframework.data.r2dbc.connectionfactory.R2dbcTransactionManager;
@@ -63,23 +63,23 @@ class ReactiveNeo4jTransactionManagerTest {
 
 	@Mock private Driver driver;
 
-	@Mock private RxSession session;
-	@Mock private RxTransaction transaction;
+	@Mock private ReactiveSession session;
+	@Mock private ReactiveTransaction transaction;
 
 	@BeforeEach
 	void setUp() {
 
-		when(driver.rxSession(any(SessionConfig.class))).thenReturn(session);
-		when(session.beginTransaction(any(TransactionConfig.class))).thenReturn(Mono.just(transaction));
-		when(transaction.rollback()).thenReturn(Mono.empty());
-		when(transaction.commit()).thenReturn(Mono.empty());
-		when(session.close()).thenReturn(Mono.empty());
+		when(driver.reactiveSession(any(SessionConfig.class))).thenReturn(session);
+		when(session.beginTransaction(any(TransactionConfig.class))).thenReturn(JdkFlowAdapter.publisherToFlowPublisher(Mono.just(transaction)));
+		when(transaction.rollback()).thenReturn(JdkFlowAdapter.publisherToFlowPublisher(Mono.empty()));
+		when(transaction.commit()).thenReturn(JdkFlowAdapter.publisherToFlowPublisher(Mono.empty()));
+		when(session.close()).thenReturn(JdkFlowAdapter.publisherToFlowPublisher(Mono.empty()));
 	}
 
 	@Test
 	void shouldWorkWithoutSynchronizations() {
 
-		Mono<RxTransaction> transactionMono = ReactiveNeo4jTransactionManager.retrieveReactiveTransaction(driver,
+		Mono<ReactiveTransaction> transactionMono = ReactiveNeo4jTransactionManager.retrieveReactiveTransaction(driver,
 				databaseSelection, userSelection);
 
 		StepVerifier.create(transactionMono).verifyComplete();
@@ -102,7 +102,7 @@ class ReactiveNeo4jTransactionManagerTest {
 					}).then(ReactiveNeo4jTransactionManager.retrieveReactiveTransaction(driver, databaseSelection, userSelection)))
 					.as(StepVerifier::create).expectNextCount(1L).verifyComplete();
 
-			verify(driver).rxSession(any(SessionConfig.class));
+			verify(driver).reactiveSession(any(SessionConfig.class));
 
 			verify(session).beginTransaction(any(TransactionConfig.class));
 			verify(session).close();
@@ -127,7 +127,7 @@ class ReactiveNeo4jTransactionManagerTest {
 				}).then(ReactiveNeo4jTransactionManager.retrieveReactiveTransaction(driver, databaseSelection, userSelection));
 			}).as(StepVerifier::create).expectNextCount(1L).verifyComplete();
 
-			verify(driver).rxSession(any(SessionConfig.class));
+			verify(driver).reactiveSession(any(SessionConfig.class));
 
 			verify(session).beginTransaction(any(TransactionConfig.class));
 			verify(session).close();
@@ -145,18 +145,8 @@ class ReactiveNeo4jTransactionManagerTest {
 			AssertableBookmarkManager bookmarkManager = new AssertableBookmarkManager();
 			injectBookmarkManager(txManager, bookmarkManager);
 
-			Bookmark bookmark = new Bookmark() {
-				@Override
-				public Set<String> values() {
-					return Collections.singleton("blubb");
-				}
-
-				@Override
-				public boolean isEmpty() {
-					return false;
-				}
-			};
-			when(session.lastBookmark()).thenReturn(bookmark);
+			Set<Bookmark> bookmark = Set.of(new BookmarkForTesting("blubb"));
+			when(session.lastBookmarks()).thenReturn(bookmark);
 
 			TransactionalOperator transactionalOperator = TransactionalOperator.create(txManager);
 
@@ -166,7 +156,7 @@ class ReactiveNeo4jTransactionManagerTest {
 							.then(ReactiveNeo4jTransactionManager.retrieveReactiveTransaction(driver, databaseSelection, userSelection)))
 					.as(StepVerifier::create).expectNextCount(1L).verifyComplete();
 
-			verify(driver).rxSession(any(SessionConfig.class));
+			verify(driver).reactiveSession(any(SessionConfig.class));
 			verify(session).beginTransaction(any(TransactionConfig.class));
 			assertThat(bookmarkManager.getBookmarksCalled).isTrue();
 			verify(session).close();
@@ -202,7 +192,7 @@ class ReactiveNeo4jTransactionManagerTest {
 									.doOnNext(tsm -> assertThat(tsm.hasResource(driver)).isTrue())))
 					.as(StepVerifier::create).expectNextCount(1L).verifyComplete();
 
-			verify(driver).rxSession(any(SessionConfig.class));
+			verify(driver).reactiveSession(any(SessionConfig.class));
 
 			verify(session).beginTransaction(any(TransactionConfig.class));
 			verify(session).close();
@@ -227,7 +217,7 @@ class ReactiveNeo4jTransactionManagerTest {
 									.doOnNext(tsm -> assertThat(tsm.hasResource(driver)).isTrue())))
 					.as(StepVerifier::create).expectNextCount(1L).verifyComplete();
 
-			verify(driver).rxSession(any(SessionConfig.class));
+			verify(driver).reactiveSession(any(SessionConfig.class));
 
 			verify(session).beginTransaction(any(TransactionConfig.class));
 			verify(session).close();
